--- a/style.css
+++ b/style.css
@@ -169,7 +169,6 @@ article { display: none; }
         }
 
 .h2, .h3, .h4, .h5 { 
-    color: var(--eerie-black2);
     text-transform: capitalize;
 }
 
@@ -633,6 +632,11 @@ article { display: none; }
     text-align: center;
   }
   
+.img-small {
+    width: 200px; 
+    float: left; 
+    margin-right: 15px;
+}
 
 /*CLIENTS*/
 
@@ -1004,24 +1008,26 @@ video {
 
     .project-item-icon-box ion-icon { --ionicon-stroke-width: 50px; }
 
-.project-title, .project-category, .project-date { margin-left: 10px; }
+.project-title.project-category{ 
+    margin-left: 10px; 
+}
 
     .project-title {
-        color: var(--eerie-black);
+        color: var(--background-dark);
         font-size: var(--fs5);
-        font-weight: var(--fw400);
         text-transform: capitalize;
         line-height: 1.3;
+        font-weight: bold;
     }
 
     .project-category {
-        color: lightslategray;
+        color: var(--accent-blue);
         font-size: var(--fs6);
         font-weight: var(--fw300);
     }
 
     .project-date {
-        color: lightslategray;
+        color: var(--accent-blue);
         font-size: var(--fs6);
         font-weight: var(--fw300);
     }
@@ -1105,6 +1111,15 @@ video {
     font-weight: var(--fw300);
     line-height: 1.6;
     text-align: justify;
+}
+
+.top-buffer {
+    margin-top: 30px;
+
+    font-size: var(--fs6);
+    color:#333;
+    text-align: left;
+    line-height: 1.6;
 }
 
 /*CONTACT*/
