--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     --accent-blue: #73939c;
     --light-accent: #98bfc9;
     --background-light: #dddad8;
+    --background-light70: #c6c3c1a8;
     --background-light60: #dddad898;
     --background-medium: #8a8a8a;
     --background-dark: #535c5f;
@@ -112,7 +113,7 @@ main {
 
 /* sidebar container */
 .sidebar, article {
-    background: var(--background-light60);
+    background: var(--background-light70);
     border: 2px solid var(--background-light60);
     border-radius: 20px;
     box-shadow: var(--shadow1);
@@ -342,6 +343,7 @@ article { display: none; }
 .contact-title {
     color: var(--background-dark);
     font-size: var(--fs8);
+    font-weight: var(--fw500);
     text-transform: uppercase;
     margin-bottom: 2px;
 }
@@ -604,6 +606,8 @@ article { display: none; }
     margin: 10px;
     text-transform: capitalize;
     letter-spacing: 2px;
+    margin-top: 10px;
+    margin-bottom: 10px;;
 }
 
 /* modal bold */
@@ -710,6 +714,7 @@ mark {
         color:#7a9ca4;
         font-weight: var(--fw600);
         line-height: 1.6;
+        letter-spacing: 3px;
     }
 
 .timeline-item { position: relative; }
@@ -1100,7 +1105,7 @@ video {
 }
 
     .blog-meta :is(.blog-category, time) {
-        color: var(--light-gray70);
+        color: whitesmoke;
         font-size: var(--fs6);
         font-weight: var(--fw300);
     }
@@ -1116,22 +1121,23 @@ video {
     margin-bottom: 10px;
     line-height: 1.3;
     transition: var(--transition1);
+    color: white;
 }
 
-    .blog-post-item > a:hover .blog-item-title { color: var(--light-accent); }
+    .blog-post-item > a:hover .blog-item-title { color: var(--accent-blue); }
 
 .blog-text {
-    color: var(--light-gray);
+    color: whitesmoke;
     font-size: var(--fs6);
-    font-weight: var(--fw300);
+    font-weight: var(--fw400);
     line-height: 1.6;
     text-align: justify;
 }
 
 .top-buffer {
     margin-top: 30px;
-    margin-bottom: 25px;
-    font-size: var(--fs5);
+    margin-bottom: 30px;
+    font-size: 17px;
     color:#333;
     text-align: left;
     line-height: 1.6;
